--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary: #ccdad1;
-    --secondary: #9caea9;
+    --primary: #48f785;
+    --secondary: #d8f768;
     --tertiary: #788585;
     --light-dark: #6f6866;
     --dark: #38302e;
