--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,39 +1,35 @@
-<html lang='en'>
-  <head>
-    <meta charset='UTF-8' />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Tech Blog</title>
-    <link
-      href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css'
-      rel='stylesheet'
-      integrity='sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We'
-      crossorigin='anonymous'
-    />
-  </head>
-  <body>
-    <nav class='navbar navbar-expand-lg navbar-light bg-light mb-5'>
-      <div class='container-fluid'>
-        <a class='navbar-brand' href='/'>Tech Blog</a>
-        <ul class='navbar-nav'>
-          <li class='nav-item'>
-            <a class='nav-link' href='/dashboard'>Dashboard</a>
-          </li>
+<!DOCTYPE html>
+<html lang="en">
 
-          <li class='nav-item'>
-            <a class='nav-link' href='/login'>Login</a>
-          </li>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Tech Blog</title>
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
 
-          <li class='nav-item'>
-            <a class='nav-link' href='/users/logout'>Logout</a>
-          </li>
+<body class="flex-column min-100-vh">
+  <nav class="navbar">
+    <ul>
+      <li class="li-inline nav-item"><a href="/">Home</a></li>
+      <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
+      <li class="li-inline nav-item"><a href="/login">Login</a></li>
+      <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
+    </ul>
+  </nav>
+  <header class="hero">
+    <h1 class="app-title"><a href="/">The Tech Blog</a></h1>
+  </header>
 
-        </ul>
-      </div>
-    </nav>
+  <main class="col-auto">
+    {{{body}}}
+  </main>
 
-    <div class='container'>
-      {{{body}}}
-    </div>
-  </body>
+  <footer class="flex-row justify-center">
+    &copy; The Tech Blog Folks
+  </footer>
+</body>
+
 </html>
+<script src="/js/logout.js"></script>
