--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
     --secondary: #d8f768;
     --tertiary: #788585;
     --light-dark: #6f6866;
-    --dark: #38302e;
+    --dark: #9c5b4b;
     --border-radius: 0.3rem;
   }
   
