--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,9 +30,9 @@
   </main>
 
   <footer class="flex-row justify-center">
-    &copy; The Tech Blog Folks
+    &copy; The Company That Loves to Blog
   </footer>
 </body>
 
 </html>
-<script src="/js/logout.js"></script>
+<script src="/techBlog-14/public/js/logout.js"></script>
