--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
       <li class="li-inline nav-item"><a href="/">Home</a></li>
       <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
       {{#if loggedIn}}
-      <li class="li-inline nav-item"><a href="/logout" id="logout-link">Logout</a></li>
+      <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
       {{else}}
       <li class="li-inline nav-item"><a href="/login" id="login-link">Login</a></li>
       {{/if}}
