--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -1,4 +1,40 @@
-<div class='row'>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Tech Blog</title>
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body class="flex-column min-100-vh">
+  <nav class="navbar">
+    <ul>
+      <li class="li-inline nav-item"><a href="/">Home</a></li>
+      <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
+      {{#if loggedIn}}
+      <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
+      {{else}}
+      <li class="li-inline nav-item"><a href="/login" id="login-link">Login</a></li>
+      {{/if}}
+    </ul>
+  </nav>
+  <header class="hero">
+    <h1 class="app-title"><a href="/">The Tech Blog</a></h1>
+  </header>
+
+  <main class="col-auto">
+    {{{body}}}
+  </main>
+
+  <footer class="flex-row justify-center">
+    &copy; The Company That Loves to Blog
+  </footer>
+</body>
+
+</html>
+{{!-- <div class='row'>
   <div class='col-6'>
     <form id='blogpost-form'>
       <h1 class='h3 mb-3 fw-normal'>Create Blog Post</h1>
@@ -18,7 +54,7 @@
 
   <div class='col-6'>
     <ol class='list-group list-group-numbered'>
-      {{#each blogposts}}
+      {{#each posts}}
       <li class='list-group-item d-flex justify-content-between align-items-start'>
         <div class='ms-2 me-auto'>
           <div class='fw-bold'>{{this.title}}</div>
@@ -29,6 +65,6 @@
       {{/each}}
     </ol>
   </div>
-</div>
+</div> --}}
 
-<script src='/techBlog-14/public/js/logout.js'></script>
+<script src='js/logout.js'></script>
