--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,9 +13,9 @@
         <input type="password" id="password-input-signup" />
       </div>
       <button type="submit" id="signup-btn" class="btn" >Signup!</button>
-      <a href="/techBlog-14/public/js/login.js">Login instead</a>
+      <a href="/login">Login instead</a>
     </form>
   </div>
 </div>
 
-<script src="/techBlog-14/public/js/signup.js"></script>
+<script src="js/signup.js"></script>
