--- a/views/all-posts-admin.handlebars
+++ b/views/all-posts-admin.handlebars
@@ -5,5 +5,5 @@
       <span>{{format_date createdAt}}</span>
     </a>
   {{/each}}
-  <button><a href="/dashboard/new"> New Post</a></button>
+  <button><a href="/new.js"> New Post</a></button>
 </div>
