--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -8,63 +8,28 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body class="flex-column min-100-vh">
   <nav class="navbar">
-    <ul>
+    <ul class="flex-row">
       <li class="li-inline nav-item"><a href="/">Home</a></li>
       <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-      {{#if loggedIn}}
       <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
-      {{else}}
-      <li class="li-inline nav-item"><a href="/login" id="login-link">Login</a></li>
-      {{/if}}
     </ul>
   </nav>
   <header class="hero">
-    <h1 class="app-title"><a href="/">The Tech Blog</a></h1>
+    <h1 class="app-title"><a href="/dashboard">Your Dashboard</a></h1>
   </header>
 
   <main class="col-auto">
     {{{body}}}
   </main>
 
-  <footer class="flex-row justify-center">
-    &copy; The Company That Loves to Blog
+  <footer class="footer flex-row justify-center">
+    <a href="/dashboard/new">➕ New Post</a>
   </footer>
 </body>
 
+<script src="/js/logout.js"></script>
+
 </html>
-{{!-- <div class='row'>
-  <div class='col-6'>
-    <form id='blogpost-form'>
-      <h1 class='h3 mb-3 fw-normal'>Create Blog Post</h1>
-
-      <div class='form-floating'>
-        <input type='text' class='form-control' id='blog-title' placeholder='title' autocomplete='off' />
-        <label for='blog-title'>Title</label>
-      </div>
-      <div class='form-floating'>
-        <textarea class='form-control' id='blog-content' placeholder='placeholder'>
-        </textarea>
-        <label for='blog-content'>Contents</label>
-      </div>
-      <button class='w-100 btn btn-lg btn-primary' type='submit'>Create Blog Post</button>
-    </form>
-  </div>
-
-  <div class='col-6'>
-    <ol class='list-group list-group-numbered'>
-      {{#each posts}}
-      <li class='list-group-item d-flex justify-content-between align-items-start'>
-        <div class='ms-2 me-auto'>
-          <div class='fw-bold'>{{this.title}}</div>
-
-        </div>
-        <button data-id={{this.id}} class='btn btn-danger'>Delete</button>
-      </li>
-      {{/each}}
-    </ol>
-  </div>
-</div> --}}
-
-<script src='js/logout.js'></script>
